todos os String.format substituidos por .formatted